# voyager

./: .gitignore  README.md
.github/workflows/: deploy.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/agents/flights/: __init__.py  client.py  server.py  tools.py
backend/agents/hotels/: __init__.py  client.py  server.py  tools.py
backend/agents/itinerary/: __init__.py  client.py  server.py  tools.py
backend/api/: main.py
backend/demo/: __init__.py  run_budget_overrun.py  run_happy_path.py  run_no_flights.py
backend/mock/: __init__.py  api.py
backend/mock/db/: __init__.py  flights.db  hotels.db  pois.db  seed.py
backend/mock/scenarios/: budget_overrun.json  hotel_sold_out.json  no_flights.json
backend/orchestrator/: __init__.py  agent.py  planner.py  prompts.py
backend/shared/: __init__.py  budget.py  cache.py  models.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/plan/[planId]/: page.tsx
frontend/components/planning/: BudgetBreakdown.tsx  FlightCard.tsx  HotelCard.tsx  ItineraryTimeline.tsx  OrchestratorLog.tsx
frontend/components/scenario/: ScenarioSelector.tsx
frontend/components/trip-form/: TripForm.tsx
frontend/hooks/: usePlanStream.ts
frontend/lib/: api.ts  sse.ts  store.ts  validations.ts
helm/voyager/: Chart.yaml  values.yaml
helm/voyager/templates/: backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  redis-deployment.yaml  redis-service.yaml  secrets.yaml
